# Whispera

./: .gitattributes  .gitignore  README.en.md  README.md  package.json  requirements-legacy.txt  requirements-mem0.txt  requirements.txt
electron-app/: PACKAGING.zh-CN.md  README.md  main.js  package-lock.json  package.json  preload.js
electron-app/renderer/: app.js  index.html  scene.js  styles.css
electron-app/scripts/: ensure_compiled_backend.js
llm-module/: .gitignore  LLM_API.md  README.md  pyproject.toml
llm-module/scripts/: llm_client.py  llm_demo.py  llm_server.py  start_llama_server.py
llm-module/src/llm_module/: __init__.py  llm.py  service.py
mem0/: LOCAL_CHANGES.md
mem0/mem0/: __init__.py
model/: model_omni.py
model/speaker/: voice_clone.pt  voices.pt  voices_unseen.pt
realtime/: __init__.py  app.py  asr_service.py  backend_main.py  llm_client.py  local_modules.py  memory_service.py  session_manager.py  text_segmenter.py  tts_service.py  tts_types.py  turn_capture.py  vad_session.py
scripts/: build_compiled_backend.ps1  build_compiled_backend.py  download_assets.py  pack_runtime.ps1  slim_runtime_for_distribution.ps1
torchaudio/: __init__.py  _io.py  functional.py  sox_effects.py  transforms.py
torchaudio/compliance/: kaldi.py
voxcpm-tts-streaming-module/: .gitignore  README.md  README.zh-CN.md  TTS_API.zh-CN.md  pyproject.toml
voxcpm-tts-streaming-module/src/voxcpm/: __init__.py  asr.py  asr_service.py  core.py  session_protocol.py  streaming_service.py
voxcpm-tts-streaming-module/src/voxcpm/model/: voxcpm.py  voxcpm2.py
